--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <nav>
-        <div>
+        <div class="profile">
             <img src="resources/images/profile-picture.jpg" alt="Kea's Profile Picture"> <!-- Added clarity to 'alt' attribute -->
-            <h5 style="display: inline-block;">Kea</h5>
+            <span class="profile-pricture-name">Kea</span>
         </div>        
         <ul>
-            <li><a href="#home">Home</a></li> 
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#resume">Resume</a></li>
+            <li><a href="index.html">Home</a></li> 
+            <li><a href="about.html">About</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="resume.html">Resume</a></li>
         </ul>
         <button>Contact Me</button>
     </nav>
