--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <header>
         <h5>Hi, I'm</h5>
         <h1>Keamogetswe Moseki</h1>
-        <h4>Software Developer</h4>
+        <h4>
+            <span>Soft</span><span>ware</span> <span>Develop</span><span>er</span>
+        </h4>
+        
     </header>
 
     <main> 
