Improved skeleten code structure

--- a/index.html
+++ b/index.html
@@ -3,38 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kea's Portfolio</title>
     <link href="styles/styles.css" rel="stylesheet">
-    <title>Kea's Portfolio</title> 
 </head>
 <body>
+    <!-- Navigation Bar -->
     <nav>
         <div class="profile">
-            <img src="resources/images/profile-picture.jpg" alt="Kea's Profile Picture"> <!-- Added clarity to 'alt' attribute -->
-            <span class="profile-pricture-name">Kea</span>
-        </div>        
+            <!-- Profile Picture and Name -->
+            <img src="resources/images/profile-picture.jpg" alt="Kea's Profile Picture">
+            <span class="profile-name">Kea</span>
+        </div>
+        <!-- Navigation Links -->
         <ul>
-            <li><a href="index.html">Home</a></li> 
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="skills.html">Skills</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="resume.html">Resume</a></li>
         </ul>
+        <!-- Contact Button -->
         <button>Contact Me</button>
     </nav>
 
+    <!-- Header Section -->
     <header>
         <h5>Hi, I'm</h5>
         <h1>Keamogetswe Moseki</h1>
         <h4>
             <span>Soft</span><span>ware</span> <span>Develop</span><span>er</span>
         </h4>
-        
+        <section class="about-me">
+            <p>
+                I am a passionate junior software developer specializing in creating efficient and scalable software solutions. 
+                With a solid foundation in JavaScript, HTML & CSS, Python, and MySQL, I am committed to continuously learning 
+                and applying new technologies to solve complex problems. I thrive in collaborative environments and enjoy contributing 
+                to both frontend and backend development processes.
+            </p>
+        </section>
     </header>
 
-    <main> 
-        <div>
-            <p>I am a passionate junior software developer specializing in creating efficient and scalable software solutions.</p> 
-        </div>
+    <!-- Main Content Section -->
+    <main>
+
     </main>
 </body>
 </html>
