--- a/index.html
+++ b/index.html
@@ -4,48 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kea's Portfolio</title>
-    <link href="styles/styles.css" rel="stylesheet">
+
+    <link rel="shortcut icon" href="" type="">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css" crossorigin="">
+
+    <link rel="stylesheet" href="styles/styles.css">
+
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="profile">
-            <!-- Profile Picture and Name -->
-            <img src="resources/images/profile-picture.jpg" alt="Kea's Profile Picture">
-            <span class="profile-name">Kea</span>
-        </div>
-        <!-- Navigation Links -->
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="resume.html">Resume</a></li>
-        </ul>
-        <!-- Contact Button -->
-        <button>Contact Me</button>
-    </nav>
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="nav__logo">
+                <span class="nav__logo-circle">R</span>
+                <span class="nav__logo-name">Kea Moseki.</span>
+            </a>
 
-    <!-- Header Section -->
-    <header>
-        <h5>Hi, I'm</h5>
-        <h1>Keamogetswe Moseki</h1>
-        <h4>
-            <span>Soft</span><span>ware</span> <span>Develop</span><span>er</span>
-        </h4>
-        <section class="about-me">
-            <p>
-                I am a passionate junior software developer specializing in creating efficient and scalable software solutions. 
-                With a solid foundation in JavaScript, HTML & CSS, Python, and MySQL, I am committed to continuously learning 
-                and applying new technologies to solve complex problems. I thrive in collaborative environments and enjoy contributing 
-                to both frontend and backend development processes.
-            </p>
-        </section>
+            <div class="nav__menu" id="nav-menu">
+                <span class="nav__title">Menu</span>
+                <h3 class="nav__name">Kea</h3>
+
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#home" class="nav__link">Home</a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#about" class="nav__link">About Me</a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#experience" class="nav__link">Experience</a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#projects" class="nav__link">Projects</a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#contact" class="nav__link">Contact Me</a>
+                    </li>
+                </ul>
+
+                <!--Close button-->
+                <div class="nav__close" id="nav-close">
+                    <i class="ri-close-line"></i>
+                </div>
+            </div>
+        </nav>
     </header>
+    
 
-    <!-- Main Content Section -->
-    <main>
-
-    </main>
+    <script src="script.js"></script>
 </body>
 </html>
