--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                     <i class="ri-close-line"></i>
                 </div>
             </div>
+
+            <div class="nav__buttons">
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class="ri-menu-line"></i>
+                </div>
+            </div>
         </nav>
     </header>
     
