Home page design structure

--- a/index.html
+++ b/index.html
@@ -59,6 +59,51 @@
             </div>
         </nav>
     </header>
+
+    <!-- Main Section -->
+     <main class="main">
+        <!-- Home Page -->
+         <section class="home_section" id="home">
+            <div class="home__container container grid">
+                <h1 class="home__name">
+                    Kea Moseki
+                </h1>
+
+                <div class="home__perfil">
+                    <div class="home__image">
+                        <img src="resources/images/home.jpg" alt="image" class="home__img">
+                        <div class="home__shadow"></div>
+
+                        <img src="resources/icons/icons8-curved-arrow-16.png" alt="" class="home__arrow">
+                        <img src="resources/icons/icons8-diagonal-lines-16.png" alt="" class="home__line">
+
+                        <div class="geometric-box"></div>
+                    </div>
+
+                    <div class="home__social">
+                        <a href="" target="_blank" class="home__social-link">
+                            <i class="ri-instagram-line"></i>
+                        </a>
+
+                        <a href="https://www.linkedin.com/in/keamogetswemoseki/" target="_blank" class="home__social-link">
+                            <i class="ri-linkedin-box-fill"></i>
+                        </a>
+
+                        <a href="https://github.com/Keamogetswee" target="_blank" class="home__social-link">
+                            <i class="ri-github-fill"></i>
+                        </a>
+                    </div>
+                </div>
+            
+
+            <div class="home__info">
+                <p class="home__description">
+                    <b>Software Developer</b>, with knowledge in web development and product management. Passionate about solving complex technical challenges, improving user experiences, and collaborating with teams to develop impactful solutions. Strong problem-solving skills, ownership mentality, and a drive for continuous learning.
+                </p>
+            </div>
+            </div>
+         </section>
+     </main>
     
 
     <script src="script.js"></script>
