Home page structure and styling

--- a/index.html
+++ b/index.html
@@ -100,6 +100,14 @@
                 <p class="home__description">
                     <b>Software Developer</b>, with knowledge in web development and product management. Passionate about solving complex technical challenges, improving user experiences, and collaborating with teams to develop impactful solutions. Strong problem-solving skills, ownership mentality, and a drive for continuous learning.
                 </p>
+
+                <a href="#about" class="home__scroll">
+                    <div class="home__scroll-box">
+                        <i class="ri-arrow-down-s-line"></i>
+                    </div>
+
+                    <span class="home__scroll-text">Scroll Down</span>
+                </a>
             </div>
             </div>
          </section>
