About section, structure and styles

--- a/index.html
+++ b/index.html
@@ -111,6 +111,47 @@
             </div>
             </div>
          </section>
+
+         <!-- About <section></section> -->
+          <section class="about section" id="about">
+            <div class="about__container container-grid">
+                <h2 class="section__title-1">About Me</h2>
+
+                <div class="about__perfil">
+                    <div class="about__image">
+                        <img src="resources/images/profile-picture.jpg" alt="image" class="about__img">
+
+                        <div class="about__shadow"></div>
+
+                        <div class="geometric-box"></div>
+                        <img src="resources/icons/icons8-diagonal-lines-16.png" alt="" class="about__line">
+                        <div class="about__box"></div>
+                    </div>
+                </div>
+
+                <div class="about__info">
+                    <p class="about__description">
+                        Passionate about creating seamless <b>Web Applications</b> and expanding my know in Frontend framework to better the experience of users.
+                    </p>
+
+                    <ul class="about__list">
+                        <li class="about__item">
+                            <b>My Skills Are:</b> HTML, CSS, JavaScript, Python, React, Github.
+                        </li>
+                    </ul>
+
+                    <div class="about__buttons">
+                        <a href="#contact" class="button">
+                            <i class="ri-send-plane-fill"></i> Contact Me
+                        </a>
+
+                        <a href="https://www.linkedin.com/in/keamogetswemoseki/" target="_blank" class="button__ghost">
+                            <i class="ri-linkedin-box-fill"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+          </section>
      </main>
     
 
