Sevices skeleton code

--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
          <!-- About <section></section> -->
           <section class="about section" id="about">
             <div class="about__container container-grid">
-                <h2 class="section__title-1">About Me</h2>
+                <h2 class="section__title-1">
+                    <span>About Me.</span>
+                </h2>
 
                 <div class="about__perfil">
                     <div class="about__image">
@@ -152,6 +154,66 @@
                 </div>
             </div>
           </section>
+
+          <!-- Services Sections -->
+           <section class="services section">
+            <h2 class="section__title-2">
+                <span>Services.</span>
+            </h2>
+
+            <div class="services__container container grid">
+                <article class="services__card">
+                    <div class="services__border"></div>
+
+                    <div class="services__content">
+                        <div class="services__icon">
+                            <div class="services__box"></div>
+                            <i class="ri-layout-6-fill"></i>
+                        </div>
+
+                        <h2 class="services__title">Product manager</h2>
+
+                        <p class="services__description">
+                            Beautiful and elegant designs with interfaces that are intuitive, effecient and pleasant to use for the user.
+                        </p>
+                    </div>
+                </article>
+
+                <article class="services__card">
+                    <div class="services__border"></div>
+
+                    <div class="services__content">
+                        <div class="services__icon">
+                            <div class="services__box"></div>
+                            <i class="ri-code-box-line"></i>
+                        </div>
+
+                        <h2 class="services__title">Software Development</h2>
+
+                        <p class="services__description">
+                            Custom web development tailored to your specifications, designed to provide a flawless user experience.
+                        </p>
+                    </div>
+                </article>
+
+                <article class="services__card">
+                    <div class="services__border"></div>
+
+                    <div class="services__content">
+                        <div class="services__icon">
+                            <div class="services__box"></div>
+                            <i class="ri-test-tube-line"></i>
+                        </div>
+
+                        <h2 class="services__title">Quality Assurance</h2>
+
+                        <p class="services__description">
+                            Maintain of a desired level of quality in a service or product, especially by means of attention to every stage of the process of delivery or production.
+                        </p>
+                    </div>
+                </article>
+            </div>
+           </section>
      </main>
     
 
