--- a/index.html
+++ b/index.html
@@ -214,6 +214,154 @@
                 </article>
             </div>
            </section>
+
+           <!-- PROJECTS <SECTION></SECTION> -->
+            <div class="projects__container container grid">
+                <article class="projects__card">
+                    <div class="projects__image">
+                        <img src="resources/images/" alt="img" class="projects__img">
+
+                        <a href="#" class="projects__button button">
+                            <i class="ri-arrow-right-up-line"></i>
+                        </a>
+                    </div>
+
+                    <div class="projects__content">
+                        <h3 class="projects__subtitle">Website</h3>
+                        <h2 class="projects__title">Restaurant Website</h2>
+
+                        <p class="projects__description">
+                            Project that you can carry out in the design
+                            and structure of the layout, showing the 
+                            design at the client's request.
+                        </p>
+                    </div>
+
+                    <div class="projects__buttons">
+                        <a href="https://github.com/Keamogetswee" target="_blank" class="projects__link">
+                            <i class="ri-github-fill"></i>
+                        </a>
+
+                        <a href="" target="_blank" class="projects__link"></a>
+                    </div>
+                </article>
+
+                <article class="projects__card">
+                    <div class="projects__image">
+                        <img src="resources/images/" alt="img" class="projects__img">
+
+                        <a href="#" class="projects__button button">
+                            <i class="ri-arrow-right-up-line"></i>
+                        </a>
+                    </div>
+
+                    <div class="projects__content">
+                        <h3 class="projects__subtitle">App</h3>
+                        <h2 class="projects__title">Yoga App</h2>
+
+                        <p class="projects__description">
+                            Project that you can carry out in the design
+                            and structure of the layout, showing the 
+                            design at the client's request.
+                        </p>
+                    </div>
+
+                    <div class="projects__buttons">
+                        <a href="https://github.com/Keamogetswee" target="_blank" class="projects__link">
+                            <i class="ri-github-fill"></i>
+                        </a>
+
+                        <a href="" target="_blank" class="projects__link"></a>
+                    </div>
+                </article>
+
+                <article class="projects__card">
+                    <div class="projects__image">
+                        <img src="resources/images/" alt="img" class="projects__img">
+
+                        <a href="#" class="projects__button button">
+                            <i class="ri-arrow-right-up-line"></i>
+                        </a>
+                    </div>
+
+                    <div class="projects__content">
+                        <h3 class="projects__subtitle">App</h3>
+                        <h2 class="projects__title">Fast Food App</h2>
+
+                        <p class="projects__description">
+                            Project that you can carry out in the design
+                            and structure of the layout, showing the 
+                            design at the client's request.
+                        </p>
+                    </div>
+
+                    <div class="projects__buttons">
+                        <a href="https://github.com/Keamogetswee" target="_blank" class="projects__link">
+                            <i class="ri-github-fill"></i>
+                        </a>
+
+                        <a href="" target="_blank" class="projects__link"></a>
+                    </div>
+                </article>
+
+                <article class="projects__card">
+                    <div class="projects__image">
+                        <img src="resources/images/" alt="img" class="projects__img">
+
+                        <a href="#" class="projects__button button">
+                            <i class="ri-arrow-right-up-line"></i>
+                        </a>
+                    </div>
+
+                    <div class="projects__content">
+                        <h3 class="projects__subtitle">Website</h3>
+                        <h2 class="projects__title">Coffee Delivery Website</h2>
+
+                        <p class="projects__description">
+                            Project that you can carry out in the design
+                            and structure of the layout, showing the 
+                            design at the client's request.
+                        </p>
+                    </div>
+
+                    <div class="projects__buttons">
+                        <a href="https://github.com/Keamogetswee" target="_blank" class="projects__link">
+                            <i class="ri-github-fill"></i>
+                        </a>
+
+                        <a href="" target="_blank" class="projects__link"></a>
+                    </div>
+                </article>
+
+                <article class="projects__card">
+                    <div class="projects__image">
+                        <img src="resources/images/" alt="img" class="projects__img">
+
+                        <a href="#" class="projects__button button">
+                            <i class="ri-arrow-right-up-line"></i>
+                        </a>
+                    </div>
+
+                    <div class="projects__content">
+                        <h3 class="projects__subtitle">Website</h3>
+                        <h2 class="projects__title">Barbershop Website</h2>
+
+                        <p class="projects__description">
+                            Project that you can carry out in the design
+                            and structure of the layout, showing the 
+                            design at the client's request.
+                        </p>
+                    </div>
+
+                    <div class="projects__buttons">
+                        <a href="https://github.com/Keamogetswee" target="_blank" class="projects__link">
+                            <i class="ri-github-fill"></i>
+                        </a>
+
+                        <a href="" target="_blank" class="projects__link"></a>
+                    </div>
+                </article>
+            </div>
      </main>
     
 
