--- a/index.html
+++ b/index.html
@@ -409,6 +409,8 @@
                                 <label for="message" class="contact__label">Message</label>
                             </div>
 
+                            <p class="contact__message" id="contact-message"></p>
+
                             <button type="submit" class="contact__button button">
                                 <i class="ri-send-plane-fill"></i>Send Message
                             </button>
@@ -448,8 +450,12 @@
                 </div>
              </section>
      </main>
+
+<!-- EMAIL JS -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     
 
+<!-- MAIN JS -->
     <script src="script.js"></script>
 </body>
 </html>
