--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
-                <span class="nav__logo-circle">R</span>
+                <span class="nav__logo-circle">KM</span>
                 <span class="nav__logo-name">Kea Moseki.</span>
             </a>
 
@@ -26,7 +26,7 @@
 
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#home" class="nav__link">Home</a>
+                        <a href="#home" class="nav__link active-link">Home</a>
                     </li>
 
                     <li class="nav__item">
@@ -34,7 +34,7 @@
                     </li>
 
                     <li class="nav__item">
-                        <a href="#experience" class="nav__link">Experience</a>
+                        <a href="#services" class="nav__link">Experience</a>
                     </li>
 
                     <li class="nav__item">
@@ -53,6 +53,10 @@
             </div>
 
             <div class="nav__buttons">
+                
+                <!-- Theme/Dark mode button -->
+                <i class="ri-moon-fill change-theme" id="theme-button"></i>
+
                 <div class="nav__toggle" id="nav-toggle">
                     <i class="ri-menu-line"></i>
                 </div>
@@ -158,7 +162,7 @@
           <!-- Services Sections -->
            <section class="services section">
             <h2 class="section__title-2">
-                <span>Services.</span>
+                <span>Experience.</span>
             </h2>
 
             <div class="services__container container grid">
@@ -450,6 +454,33 @@
                 </div>
              </section>
      </main>
+
+
+     <!-- FOOTER SECTION -->
+      <footer class="footer">
+        <div class="footer__container container grid">
+            <ul class="footer__links">
+                <li>
+                    <a href="#about" class="footer__link">About</a>
+                </li>
+
+                <li>
+                    <a href="#services" class="footer__link">Services</a>
+                </li>
+
+                <li>
+                    <a href="#projects" class="footer__link">Projects</a>
+                </li>
+            </ul>
+
+            <span class="footer__copy">&#169; All Rights Reserved By <a href="">Kea.</a></span>
+        </div>
+      </footer>
+
+      <!-- SCROLL UP SECTION -->
+       <a href="" class="scrollup" id="scroll-up">
+        <i class="ri-arrow-up-s-fill"></i>
+       </a>
 
 <!-- EMAIL JS -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
