--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </li>
 
                     <li class="nav__item">
-                        <a href="#contact" class="nav__link">Contact Me</a>
+                        <a href="#contact" class="nav__link nav__link-button">Contact Me</a>
                     </li>
                 </ul>
 
